# hal_1892vm206

./: .clang-format  .clang-tidy  .clangd  CMakeLists.txt  CMakePresets.json  README.md  toolchain.cmake
config/: unity_config.h
include/utils/: types.h
src/: main.c  project.ld
src/asm/: start.s
